style.css
/* ... */
#comic-characters li:nth-child(odd) {
  background: #2F2F2F;
}
#view-comics, #view-node, #view-all-comics {
  display: inline-block;
  cursor: pointer;
  font-weight: bold;
  font-size: 16px;
  margin: 10px 0 10px 0!important;
  text-transform: uppercase;
  line-height: 20px;
}
#view-all-comics {
  padding-top: 5px;
}
#view-comics > span, #view-node > span, #view-all-comics span {
  width: 170px;
  background-color: var(--marvel-red);
  color: #DDD!important;
  border: 2px solid #555;
  border-radius: 5px;
  padding: 5px;
}
#credits {
  position: absolute;
  bottom: 0px;
  width: 300px;
  line-height: 13px;
  border-top: 1px dashed #444;
  background-color: #222;
  z-index: 2;
}
#credits p {
  font-size: 12px;
  padding: 3px 0px 0 34px;
  margin: 0;
}
#credits p:last-child {
  padding-bottom: 3px;
}
#help {
  background-color: var(--marvel-red)!important;
  width: 28px;
  height: 28px;
  font-size: 20px;
  color: white;
  position: absolute;
  left: 0;
  margin: 4px;
  cursor: pointer;
  font-weight: bold;
  border-radius: 20px;
  border: 1px solid #555;
  display: flex;
  align-content: center;
  justify-content: center;
  align-items: center;
}
#webgl-disclaimer, #noscript {
  z-index: 10;
  opacity: 0.8;
}
#webgl-disclaimer {
  display: none;
}
#webgl-disclaimer p, #noscript p {
  position: relative;
  width: 66%;
  top: 30%;
  left: 17%;
  text-align: center;
  font-size: 22px;
  color: #999;
}
.sigma-container {
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: black;
}
#clusters-layer {
  width: 100%;
  height: 100%;
  position: absolute;
}
.cluster-label {
  position: absolute;
  transform: translate(-50%, -50%);
  text-transform: uppercase;
  font-weight: bold;
  font-size: 16px;
  padding: 3px 8px;
  background-color: rgba(0, 0, 0, 0.55);
  border-radius: 14px;
  text-align: center;
}
.loader {
  position: absolute;
  z-index: 5;
  display: none;
  opacity: 0.85;
  -webkit-transition: opacity 0.25s ease-in-out;
  -moz-transition: opacity 0.25s ease-in-out;
  -o-transition: opacity 0.25s ease-in-out;
  transition: opacity 0.25s ease-in-out;
}
.loader img {
  width: 45px;
}
#loader {
  top: calc(50% - 25px);
  left: calc(50% + 125px);
  opacity: 0;
}
#loader-comics {
  bottom: 0;
  right: 0;
  padding: 0 5px;
  display: none;
}
#loader-list {
  display: none;
}
#loader-list img {
  position: relative;
  top: 35px;
  left: 0;
  width: 45px;
}
.modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 20;
  display: none;
  background-color: rgba(0, 0, 0, 0.85);
  text-align: center;
  cursor: pointer;
}
#modal-helper {
  height: 100%;
  display: inline-block;
  vertical-align: middle;
}
#modal-img {
  max-width: calc(100% - 10px);
  max-height: calc(100% - 50px);
  z-index: 20;
  vertical-align: middle;
  margin: 5px 5px 45px 0;
}
#modal-actions {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 45px;
}
#modal-actions button {
  margin: 5px 10px;
  display: inline-block;
}
#modal button img {
  z-index: -1;
  width: 24px;
}
#modal-pause {
  display: none;
}
#help-box {
  position: absolute;
  top: 0;
  left: 15%;
  width: calc(70% - 60px);
  height: calc(100% - 60px);
  z-index: 25;
  overflow-y: auto;
  background-color: #444;
  color: #CCC;
  text-align: left;
  padding: 30px;
  margin: 0;
  transform: scale(0);
  -webkit-transition: transform .3s linear;
  -moz-transition: transform .3s linear;
  -o-transition: transform .3s linear;
  transition: transform .3s linear;
  cursor: default;
}
#help-box p {
  margin: 8px;
  font-size: 14px;
  line-height: 24px;
}
#help-box a, #help-box a:visited {
  color: #af7f7f;
  text-decoration: none;
}
#help-box a:hover, #help-box a:visited:hover {
  text-decoration: underline;
}
#controls {
  position: absolute;
  top: 10px;
  text-align: center;
  width: 156px;
}
#sigma-buttons {
  display: flex;
  vertical-align: middle;
}
#sigma-buttons button {
  flex: auto;
  width: 38px;
  height: 38px;
  margin: 1px;
  background: #eee;
  outline: none;
  cursor: pointer;
  font-size: 15px;
  font-weight: bold;
  padding: 0;
  border: 2px solid #555;
  border-radius: 5px;
}
#sigma-buttons button img {
  width: 20px;
  margin-top: 3px;
}
#regscreen {
  display: none;
}
#fullscreen {
  display: block;
}
@media all and (display-mode: fullscreen) {
  #regscreen {
    display: block;
  }
  #fullscreen {
    display: none;
  }
}
#search {
  margin: 2px;
}
#search input {
  width: 100%;
  padding: 7px 5px 7px 7px;
  text-align: center;
  font-family: "DejaVu Sans Mono", monospace;
  font-size: 14px;
  line-height: 16px;
  background: #eee;
  display: block;
  border: 2px solid #555;
  border-radius: 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#suggestions-select {
  display: none;
  width: 152px;
  height: 33px;
  border: 2px solid #555;
  border-radius: 5px;
}
/* -------- Switch Styles ------------*/
#choices .network-choice:last-child {
  margin-bottom: 0;
}
#choices .network-choice:first-child {
  margin-top: 0;
}
#choices {
  position: absolute;
  bottom: 36px;
  width: 300px;
  padding: 8px 0 10px 0;
  margin: 0;
  border-top: 1px dashed #444;
}
.network-choice {
  display: flex;
  justify-content: center;
  position:relative;
  width: 100%;
  margin-bottom: 10px;
  height: 28px;
}
label, .toggle {
  height: 100%;
  border-radius: 100px;
}
label {
  display: block;
  width: 236px;
  background-color: white;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
}
.toggle {
  position: absolute;
  width: 116px;
  background-color: var(--marvel-red);
  transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  margin: -2px 0 0 -2px;
  border: 2px solid #555;
}
.names {
  font-size: 90%;
  font-weight: bolder;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
  user-select: none;
}
/* ... */

